# MOSAICS

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  _typos.toml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt
docs/: conf.py  index.rst  objects.md  star_convention.md  theory.rst
docs/notebooks/: B-factors.ipynb  compare_projectors.ipynb  import_pdb_structure.ipynb  import_scattering_density.ipynb  parse_out_coordinates_to_particle_stack.ipynb
src/mosaics/: __init__.py  cross_correlation_core.py  micrograph.py  mosaics_dataset.py  mosaics_manager.py  mosaics_result.py  particle_stack.py  reference_template_projector.py  template_iterator.py  utils.py
src/mosaics/data_structures/: __init__.py  contrast_transfer_function.py  match_template_result.py  micrograph.py  particle_stack.py  reference_template.py  refine_template_result.py  utils.py
src/mosaics/filters/: bandpass_filter.py  contrast_transfer_function.py  exposure_filter.py  whitening_filter.py
src/mosaics/reference_template/: elastic_scattering_factors.json  mtf_k2_300kV.star  projector.py  simulator.py  template_structure.py
